--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="http://wmotors.ae/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<link rel="stylesheet" href="css/main.css" />
+		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie9.css" /><![endif]-->
+		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie8.css" /><![endif]-->
 	</head>
 	<body>
 
@@ -172,9 +172,9 @@
 			<script src="http://www.ajitbhawan.com/js/jquery.scrollex.min.js"></script>
 			<script src="http://www.ajitbhawan.com/js/jquery.scrolly.min.js"></script>
 			<script src="http://www.ajitbhawan.com/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
+			<script src="js/util.js"></script>
 			<!--[if lte IE 8]><script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.1.0/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
+			<script src="js/main.js"></script>
 
 	</body>
 </html>
